fix icons responsive alignment

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -49,7 +49,7 @@ a::after {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 0.15em;
+  height: 0.1em;
   opacity: 0;
   transition: opacity 300ms, transform 300ms;
   background-color: hsla(160, 100%, 37%, 0.4);
